<resources>
    <string name="app_name">CartBazaar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_by_category">Shop by category</string>
    <string name="see_all">See all</string>
    <string name="shop_by_products">Shop by products</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="village">Village</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log Out</string>
    <string name="product_name">Product Name</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="add">Add</string>
</resources>